--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sai Nikhil Portfolio</title>
+    <title>Leela Phani Chandu Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -302,7 +302,7 @@
     </nav>
     <header>
         <div>
-            <img src="Passport Pic New - Nikhil.jpg" alt="Profile Picture" />
+            <img src="chandu passport photo.jpg" alt="Profile Picture" />
         </div>
         <div style="text-align: center;">
                 <h1>Leela Phani Chandu Bathula</h1>
@@ -649,3 +649,4 @@
 </body>
 
 </html>
+
