--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
             header h1 {
                 font-size: 1.8rem !important;
             }
+            header{
+                padding-top: 40px !important;
+            }
 
         }
 
